# xiahack

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
backend/: app.py  app_old.py  research_agent.py  xaitts.py  xaitts_cloning.py
frontend/: app-config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/components/app/: app.tsx  session-view.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/avatar/: vrm-avatar.tsx
frontend/hooks/: useAvatarToolBridge.ts
frontend/lib/: avatar-tools.ts  utils.ts
frontend/styles/: globals.css
voice-demo-hackathon/: demo.py
